<resources>
    <string name="app_name">AnimalKingdomExplorer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="animal_details">Animal Details</string>
    <string name="species_details">Species Details</string>
    <string name="add_animal">Add Animal</string>
    <string name="name">Name</string>
    <string name="habitat">Habitat</string>
    <string name="diet">Diet</string>
    <string name="add">Add</string>
    <string name="add_species">Add Species</string>
    <string name="description">Description</string>
</resources>